- Retirado entidades de usuarios, alunos-turmas, turmas - Adicionado entidade coordenador (funcionando) - Adicionado rotas ao swagger
